--- a/index.html
+++ b/index.html
@@ -14,29 +14,33 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <nav id="nav-flex-container">
-      <p>Welcome</p>
-      <img src="Images/Menu.svg" alt="Menu" />
-    </nav>
-    <header id="header-flex-container">
-      <h1>
-        Hey there. I’m Kerolous <br /><span>I’m a software developer</span>
-      </h1>
-      <p>
-        I can help you build a product , feature or website Look through some of
-        my work and experience! If you like what you see and have a project you
-        need coded, don’t hestiate to contact me.
-      </p>
-      <div>
-        <a href="#"><img src="Images/twitter.svg" alt="twitter" /></a>
-        <a href="#"><img src="Images/Linkedin.svg" alt="Linkedin" /></a>
-        <a href="#"><img src="Images/medium.svg" alt="medium" /></a>
-        <a href="#"><img src="Images/github.svg" alt="github" /></a>
-        <a href="#"><img src="Images/angellist.svg" alt="angellist" /></a>
-      </div>
-      <a href="#">
-        <img src="Images/Disabled.svg" alt="GoDown" />
-      </a>
+    <header>
+      <nav id="nav-flex-container">
+        <p>Welcome</p>
+        <img src="Images/Menu.svg" alt="Menu" />
+      </nav>
     </header>
+    <section>
+      <header id="header-flex-container">
+        <h1>
+          Hey there. I’m Kerolous <br /><span>I’m a software developer</span>
+        </h1>
+        <p>
+          I can help you build a product , feature or website Look through some of
+          my work and experience! If you like what you see and have a project you
+          need coded, don’t hestiate to contact me.
+        </p>
+        <ul>
+          <li><a href="#"><img src="Images/twitter.svg" alt="twitter" /></a></li>
+          <li><a href="#"><img src="Images/Linkedin.svg" alt="Linkedin" /></a></li>
+          <li><a href="#"><img src="Images/medium.svg" alt="medium" /></a></li>
+          <li><a href="#"><img src="Images/github.svg" alt="github" /></a></li>
+          <li><a href="#"><img src="Images/angellist.svg" alt="angellist" /></a></li>
+        </ul>
+        <a href="#">
+          <img src="Images/Disabled.svg" alt="GoDown" />
+        </a>
+      </header>
+    </section>
   </body>
 </html>
