Add My-Recent-Works Section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;500;700&display=swap"
       rel="stylesheet"
     />
     <title>Portfolio</title>
@@ -41,6 +41,83 @@
           <img src="Images/Disabled.svg" alt="GoDown" />
         </a>
       </header>
+    </section>
+    <section id="my-recent-works"> 
+      <h2 class="section-header">My Recent Works</h2>
+      <div id="cards-grid-container">
+        <div class="card">
+          <div class="card-flex-container">
+            <p class="card-title">Multi-Post Stories Gain+Glory</p>
+            <div class="tags-flex-container">
+              <p class="tag">Ruby on rails</p>
+              <p class="tag">css</p>
+              <p class="tag">JavaScript</p>
+              <p class="tag">html</p>
+            </div>
+            <button class="card-btn">See Project</button>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-flex-container">
+            <p class="card-title">Multi-Post Stories Gain+Glory</p>
+            <div class="tags-flex-container">
+              <p class="tag">Ruby on rails</p>
+              <p class="tag">css</p>
+              <p class="tag">JavaScript</p>
+              <p class="tag">html</p>
+            </div>
+            <button class="card-btn">See Project</button>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-flex-container">
+            <p class="card-title">Multi-Post Stories Gain+Glory</p>
+            <div class="tags-flex-container">
+              <p class="tag">Ruby on rails</p>
+              <p class="tag">css</p>
+              <p class="tag">JavaScript</p>
+              <p class="tag">html</p>
+            </div>
+            <button class="card-btn">See Project</button>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-flex-container">
+            <p class="card-title">Multi-Post Stories Gain+Glory</p>
+            <div class="tags-flex-container">
+              <p class="tag">Ruby on rails</p>
+              <p class="tag">css</p>
+              <p class="tag">JavaScript</p>
+              <p class="tag">html</p>
+            </div>
+            <button class="card-btn">See Project</button>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-flex-container">
+            <p class="card-title">Multi-Post Stories Gain+Glory</p>
+            <div class="tags-flex-container">
+              <p class="tag">Ruby on rails</p>
+              <p class="tag">css</p>
+              <p class="tag">JavaScript</p>
+              <p class="tag">html</p>
+            </div>
+            <button class="card-btn">See Project</button>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-flex-container">
+            <p class="card-title">Multi-Post Stories Gain+Glory</p>
+            <div class="tags-flex-container">
+              <p class="tag">Ruby on rails</p>
+              <p class="tag">css</p>
+              <p class="tag">JavaScript</p>
+              <p class="tag">html</p>
+            </div>
+            <button class="card-btn">See Project</button>
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
