Add about-me Section

--- a/index.html
+++ b/index.html
@@ -26,23 +26,33 @@
           Hey there. I’m Kerolous <br /><span>I’m a software developer</span>
         </h1>
         <p>
-          I can help you build a product , feature or website Look through some of
-          my work and experience! If you like what you see and have a project you
-          need coded, don’t hestiate to contact me.
+          I can help you build a product , feature or website Look through some
+          of my work and experience! If you like what you see and have a project
+          you need coded, don’t hestiate to contact me.
         </p>
-        <ul>
-          <li><a href="#"><img src="Images/twitter.svg" alt="twitter" /></a></li>
-          <li><a href="#"><img src="Images/Linkedin.svg" alt="Linkedin" /></a></li>
-          <li><a href="#"><img src="Images/medium.svg" alt="medium" /></a></li>
-          <li><a href="#"><img src="Images/github.svg" alt="github" /></a></li>
-          <li><a href="#"><img src="Images/angellist.svg" alt="angellist" /></a></li>
+        <ul class="social-ul">
+          <li>
+            <a href="#"><img src="Images/twitter.svg" alt="twitter" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="Images/Linkedin.svg" alt="Linkedin" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="Images/medium.svg" alt="medium" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="Images/github.svg" alt="github" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="Images/angellist.svg" alt="angellist" /></a>
+          </li>
         </ul>
         <a href="#">
           <img src="Images/Disabled.svg" alt="GoDown" />
         </a>
       </header>
     </section>
-    <section id="my-recent-works"> 
+    <section id="my-recent-works">
       <h2 class="section-header">My Recent Works</h2>
       <div id="cards-grid-container">
         <div class="card">
@@ -54,7 +64,7 @@
               <p class="tag">JavaScript</p>
               <p class="tag">html</p>
             </div>
-            <button class="card-btn">See Project</button>
+            <button type="button" class="card-btn">See Project</button>
           </div>
         </div>
         <div class="card">
@@ -66,7 +76,7 @@
               <p class="tag">JavaScript</p>
               <p class="tag">html</p>
             </div>
-            <button class="card-btn">See Project</button>
+            <button type="button" class="card-btn">See Project</button>
           </div>
         </div>
         <div class="card">
@@ -78,7 +88,7 @@
               <p class="tag">JavaScript</p>
               <p class="tag">html</p>
             </div>
-            <button class="card-btn">See Project</button>
+            <button type="button" class="card-btn">See Project</button>
           </div>
         </div>
         <div class="card">
@@ -90,7 +100,7 @@
               <p class="tag">JavaScript</p>
               <p class="tag">html</p>
             </div>
-            <button class="card-btn">See Project</button>
+            <button type="button" class="card-btn">See Project</button>
           </div>
         </div>
         <div class="card">
@@ -102,7 +112,7 @@
               <p class="tag">JavaScript</p>
               <p class="tag">html</p>
             </div>
-            <button class="card-btn">See Project</button>
+            <button type="button" class="card-btn">See Project</button>
           </div>
         </div>
         <div class="card">
@@ -114,10 +124,63 @@
               <p class="tag">JavaScript</p>
               <p class="tag">html</p>
             </div>
-            <button class="card-btn">See Project</button>
+            <button type="button" class="card-btn">See Project</button>
           </div>
         </div>
       </div>
+    </section>
+    <section id="about-me">
+      <img
+        class="about-me-img1"
+        src="Images/illustration1-aboutmemobile.svg"
+        alt="backgroundImage"
+      />
+      <img
+        class="about-me-img2"
+        src="Images/illustration2-aboutmemobile.svg"
+        alt="backgroundImage"
+      />
+      <h2>About me</h2>
+      <p>
+        I can help you build a product , feature or website Look through some of
+        my work and experience! If you like what you see and have a project you
+        need coded, don’t hestiate to contact me.
+      </p>
+      <button type="button" class="btn">Get My Resume</button>
+      <ul id="about-me-ul">
+        <li>
+          <img src="Images/icon-languages.png" alt="languages" />
+          <p>Languages</p>
+          <div class="tags-flex-container">
+            <p class="White-tag">JavaScript</p>
+            <p class="White-tag">Ruby</p>
+            <p class="White-tag">Html</p>
+            <p class="White-tag">Css</p>
+          </div>
+        </li>
+        <li>
+          <img src="Images/icon-frameworks.png" alt="frameworks" />
+          <p>Frameworks</p>
+          <div class="tags-flex-container">
+            <p class="White-tag">Bootstrap</p>
+            <p class="White-tag">Ruby on rails</p>
+            <p class="White-tag">RSpec</p>
+            <p class="White-tag">Css</p>
+            <p class="White-tag">Selenium</p>
+          </div>
+        </li>
+        <li>
+          <img src="Images/icon-skills.png" alt="skills" />
+          <p>Skills</p>
+          <div class="tags-flex-container">
+            <p class="White-tag">Codekit</p>
+            <p class="White-tag">GitHub</p>
+            <p class="White-tag">Codepen</p>
+            <p class="White-tag">Css</p>
+            <p class="White-tag">GitHub</p>
+          </div>
+        </li>
+      </ul>
     </section>
   </body>
 </html>
