Fix required changes

--- a/index.html
+++ b/index.html
@@ -56,90 +56,86 @@
       <h2 class="section-header">My Recent Works</h2>
       <div id="cards-grid-container">
         <div class="card">
+          <img class="card-img" src="Images/SnapshootPortfolio.png" alt="">
           <div class="card-flex-container">
-            <p class="card-title">Multi-Post Stories Gain+Glory</p>
-            <div class="tags-flex-container">
-              <p class="tag">Ruby on rails</p>
-              <p class="tag">css</p>
-              <p class="tag">JavaScript</p>
-              <p class="tag">html</p>
-            </div>
+            <h3 class="card-title">Multi-Post Stories Gain+Glory</h3>
+            <ul class="tags-flex-container">
+              <li class="tag">Ruby on rails</li>
+              <li class="tag">css</li>
+              <li class="tag">JavaScript</li>
+              <li class="tag">html</li>
+            </ul>
             <button type="button" class="card-btn">See Project</button>
           </div>
         </div>
         <div class="card">
+          <img class="card-img" src="Images/SnapshootPortfolio.png" alt="">
           <div class="card-flex-container">
-            <p class="card-title">Multi-Post Stories Gain+Glory</p>
-            <div class="tags-flex-container">
-              <p class="tag">Ruby on rails</p>
-              <p class="tag">css</p>
-              <p class="tag">JavaScript</p>
-              <p class="tag">html</p>
-            </div>
+            <h3 class="card-title">Multi-Post Stories Gain+Glory</h3>
+            <ul class="tags-flex-container">
+              <li class="tag">Ruby on rails</li>
+              <li class="tag">css</li>
+              <li class="tag">JavaScript</li>
+              <li class="tag">html</li>
+            </ul>
             <button type="button" class="card-btn">See Project</button>
           </div>
         </div>
         <div class="card">
+          <img class="card-img" src="Images/SnapshootPortfolio.png" alt="">
           <div class="card-flex-container">
-            <p class="card-title">Multi-Post Stories Gain+Glory</p>
-            <div class="tags-flex-container">
-              <p class="tag">Ruby on rails</p>
-              <p class="tag">css</p>
-              <p class="tag">JavaScript</p>
-              <p class="tag">html</p>
-            </div>
+            <h3 class="card-title">Multi-Post Stories Gain+Glory</h3>
+            <ul class="tags-flex-container">
+              <li class="tag">Ruby on rails</li>
+              <li class="tag">css</li>
+              <li class="tag">JavaScript</li>
+              <li class="tag">html</li>
+            </ul>
             <button type="button" class="card-btn">See Project</button>
           </div>
         </div>
         <div class="card">
+          <img class="card-img" src="Images/SnapshootPortfolio.png" alt="">
           <div class="card-flex-container">
-            <p class="card-title">Multi-Post Stories Gain+Glory</p>
-            <div class="tags-flex-container">
-              <p class="tag">Ruby on rails</p>
-              <p class="tag">css</p>
-              <p class="tag">JavaScript</p>
-              <p class="tag">html</p>
-            </div>
+            <h3 class="card-title">Multi-Post Stories Gain+Glory</h3>
+            <ul class="tags-flex-container">
+              <li class="tag">Ruby on rails</li>
+              <li class="tag">css</li>
+              <li class="tag">JavaScript</li>
+              <li class="tag">html</li>
+            </ul>
             <button type="button" class="card-btn">See Project</button>
           </div>
         </div>
         <div class="card">
+          <img class="card-img" src="Images/SnapshootPortfolio.png" alt="">
           <div class="card-flex-container">
-            <p class="card-title">Multi-Post Stories Gain+Glory</p>
-            <div class="tags-flex-container">
-              <p class="tag">Ruby on rails</p>
-              <p class="tag">css</p>
-              <p class="tag">JavaScript</p>
-              <p class="tag">html</p>
-            </div>
+            <h3 class="card-title">Multi-Post Stories Gain+Glory</h3>
+            <ul class="tags-flex-container">
+              <li class="tag">Ruby on rails</li>
+              <li class="tag">css</li>
+              <li class="tag">JavaScript</li>
+              <li class="tag">html</li>
+            </ul>
             <button type="button" class="card-btn">See Project</button>
           </div>
         </div>
         <div class="card">
+          <img class="card-img" src="Images/SnapshootPortfolio.png" alt="">
           <div class="card-flex-container">
-            <p class="card-title">Multi-Post Stories Gain+Glory</p>
-            <div class="tags-flex-container">
-              <p class="tag">Ruby on rails</p>
-              <p class="tag">css</p>
-              <p class="tag">JavaScript</p>
-              <p class="tag">html</p>
-            </div>
+            <h3 class="card-title">Multi-Post Stories Gain+Glory</h3>
+            <ul class="tags-flex-container">
+              <li class="tag">Ruby on rails</li>
+              <li class="tag">css</li>
+              <li class="tag">JavaScript</li>
+              <li class="tag">html</li>
+            </ul>
             <button type="button" class="card-btn">See Project</button>
           </div>
         </div>
       </div>
     </section>
     <section id="about-me">
-      <img
-        class="about-me-img1"
-        src="Images/illustration1-aboutmemobile.svg"
-        alt="backgroundImage"
-      />
-      <img
-        class="about-me-img2"
-        src="Images/illustration2-aboutmemobile.svg"
-        alt="backgroundImage"
-      />
       <h2>About me</h2>
       <p>
         I can help you build a product , feature or website Look through some of
@@ -150,35 +146,35 @@
       <ul id="about-me-ul">
         <li>
           <img src="Images/icon-languages.png" alt="languages" />
-          <p>Languages</p>
-          <div class="tags-flex-container">
-            <p class="White-tag">JavaScript</p>
-            <p class="White-tag">Ruby</p>
-            <p class="White-tag">Html</p>
-            <p class="White-tag">Css</p>
-          </div>
+          <h3>Languages</h3>
+          <ul class="tags-flex-container">
+            <li class="White-tag">JavaScript</li>
+            <li class="White-tag">Ruby</li>
+            <li class="White-tag">Html</li>
+            <li class="White-tag">Css</li>
+          </ul>
         </li>
         <li>
           <img src="Images/icon-frameworks.png" alt="frameworks" />
-          <p>Frameworks</p>
-          <div class="tags-flex-container">
-            <p class="White-tag">Bootstrap</p>
-            <p class="White-tag">Ruby on rails</p>
-            <p class="White-tag">RSpec</p>
-            <p class="White-tag">Css</p>
-            <p class="White-tag">Selenium</p>
-          </div>
+          <h3>Frameworks</h3>
+          <ul class="tags-flex-container">
+            <li class="White-tag">Bootstrap</li>
+            <li class="White-tag">Ruby on rails</li>
+            <li class="White-tag">RSpec</li>
+            <li class="White-tag">Css</li>
+            <li class="White-tag">Selenium</li>
+          </ul>
         </li>
         <li>
           <img src="Images/icon-skills.png" alt="skills" />
-          <p>Skills</p>
-          <div class="tags-flex-container">
-            <p class="White-tag">Codekit</p>
-            <p class="White-tag">GitHub</p>
-            <p class="White-tag">Codepen</p>
-            <p class="White-tag">Css</p>
-            <p class="White-tag">GitHub</p>
-          </div>
+          <h3>Skills</h3>
+          <ul class="tags-flex-container">
+            <li class="White-tag">Codekit</li>
+            <li class="White-tag">GitHub</li>
+            <li class="White-tag">Codepen</li>
+            <li class="White-tag">Css</li>
+            <li class="White-tag">GitHub</li>
+          </ul>
         </li>
       </ul>
     </section>
