--- a/index.html
+++ b/index.html
@@ -178,5 +178,33 @@
         </li>
       </ul>
     </section>
+    <footer>
+      <p>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
+      <form action="" method="">
+        <input type="text" name="fullName" id="fullName" placeholder="Full name" maxlength="30" required>
+        <input type="email" name="email" id="email" placeholder="Email address" required>
+        <textarea name="userComment" id="userComment" cols="15" rows="5" maxlength="500" required></textarea>
+      </form>
+      <button type="button">Get in touch</button>
+      <ul class="social-ul">
+        <li>
+          <a href="#"><img src="Images/twitter.svg" alt="twitter" /></a>
+        </li>
+        <li>
+          <a href="#"><img src="Images/Linkedin.svg" alt="Linkedin" /></a>
+        </li>
+        <li>
+          <a href="#"><img src="Images/medium.svg" alt="medium" /></a>
+        </li>
+        <li>
+          <a href="#"><img src="Images/github.svg" alt="github" /></a>
+        </li>
+        <li>
+          <a href="#"><img src="Images/angellist.svg" alt="angellist" /></a>
+        </li>
+      </ul>
+      <p>myemailhere@email.com</p>
+    </footer>
+
   </body>
 </html>
