--- a/index.html
+++ b/index.html
@@ -178,15 +178,15 @@
         </li>
       </ul>
     </section>
-    <footer>
-      <p>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
-      <form action="" method="">
-        <input type="text" name="fullName" id="fullName" placeholder="Full name" maxlength="30" required>
-        <input type="email" name="email" id="email" placeholder="Email address" required>
-        <textarea name="userComment" id="userComment" cols="15" rows="5" maxlength="500" required></textarea>
+    <footer id="footer-section">
+      <p class="footer-description">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
+      <form action="" method="" id="footer-form">
+        <input type="text" name="fullName" id="fullName" placeholder="Full name" maxlength="30" class="input-forms" required>
+        <input type="email" name="email" id="email" placeholder="Email address" class="input-forms" required>
+        <textarea name="userComment" id="userComment" cols="15" rows="5" maxlength="500" placeholder="Enter text here" required></textarea>
       </form>
-      <button type="button">Get in touch</button>
-      <ul class="social-ul">
+      <button type="button" class="btn">Get in touch</button>
+      <ul class="social-ul" id="social-icons">
         <li>
           <a href="#"><img src="Images/twitter.svg" alt="twitter" /></a>
         </li>
@@ -203,7 +203,7 @@
           <a href="#"><img src="Images/angellist.svg" alt="angellist" /></a>
         </li>
       </ul>
-      <p>myemailhere@email.com</p>
+      <p id="footer-email">myemailhere@email.com</p>
     </footer>
 
   </body>
