--- a/index.html
+++ b/index.html
@@ -180,10 +180,12 @@
     </section>
     <footer id="footer-section">
       <p class="footer-description">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
-      <form action="" method="" id="footer-form">
-        <input type="text" name="fullName" id="fullName" placeholder="Full name" maxlength="30" class="input-forms" required>
-        <input type="email" name="email" id="email" placeholder="Email address" class="input-forms" required>
-        <textarea name="userComment" id="userComment" cols="15" rows="5" maxlength="500" placeholder="Enter text here" required></textarea>
+      <form action="https://formspree.io/f/xknpanwy" method="" id="footer-form">
+        <ul id="form-items">
+          <li><input type="text" name="fullName" id="fullName" placeholder="Full name" maxlength="30" class="input-forms" required></li>
+          <li><input type="email" name="email" id="email" placeholder="Email address" class="input-forms" required></li>
+          <li><textarea name="userComment" id="userComment" maxlength="500" placeholder="Enter text here" required></textarea></li>
+        </ul>
       </form>
       <button type="button" class="btn">Get in touch</button>
       <ul class="social-ul" id="social-icons">
