--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     </section>
     <footer id="footer-section">
       <p class="footer-description">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
-      <form action="https://formspree.io/f/xknpanwy" method="" id="footer-form">
+      <form action="https://formspree.io/f/xknpanwy" method="get" id="footer-form">
         <ul id="form-items">
           <li><input type="text" name="fullName" id="fullName" placeholder="Full name" maxlength="30" class="input-forms" required></li>
           <li><input type="email" name="email" id="email" placeholder="Email address" class="input-forms" required></li>
