Add required changes by code reviewer

--- a/index.html
+++ b/index.html
@@ -180,16 +180,16 @@
     </section>
     <footer id="footer-section">
       <p class="footer-description">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</p>
-      <form action="https://formspree.io/f/xknpanwy" method="get" id="footer-form">
+      <form action="https://formspree.io/f/xknpanwy" method="post" id="footer-form">
         <ul id="form-items">
           <li><input type="text" name="fullName" id="fullName" placeholder="Full name" maxlength="30" class="input-forms" required></li>
           <li><input type="email" name="email" id="email" placeholder="Email address" class="input-forms" required></li>
           <li><textarea name="userComment" id="userComment" maxlength="500" placeholder="Enter text here" required></textarea></li>
         </ul>
-        <button type="button" class="btn">Get in touch</button>
+        <button type="submit" class="btn">Get in touch</button>
       </form>
       
-      <ul class="social-ul" id="social-icons">
+      <ul class="social-ul" id="footer-icons">
         <li>
           <a href="#"><img src="Images/twitter.svg" alt="twitter" /></a>
         </li>
