Add Desktop version

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     </header>
     <section>
       <header id="header-flex-container">
+        <ul class="nav-ul">
+          <li><a href="#">Portoflio</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
         <h1>
           Hey there. I’m Kerolous <br /><span>I’m a software developer</span>
         </h1>
