Add required changes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header>
       <nav id="nav-flex-container">
         <p>Welcome</p>
-        <img src="Images/Menu.svg" alt="This is menu button" />
+        <img src="Images/Menu.svg" alt="Menu icon" />
       </nav>
     </header>
     <section>
@@ -50,23 +50,23 @@
         </p>
         <ul class="social-ul">
           <li>
-            <a href="#"><img src="Images/twitter.svg" alt="This is twitter button" /></a>
+            <a href="#"><img src="Images/twitter.svg" alt="twitter icon" /></a>
           </li>
           <li>
-            <a href="#"><img src="Images/Linkedin.svg" alt="This is linkedin button" /></a>
+            <a href="#"><img src="Images/Linkedin.svg" alt="linkedin icon" /></a>
           </li>
           <li>
-            <a href="#"><img src="Images/medium.svg" alt="This is medium button" /></a>
+            <a href="#"><img src="Images/medium.svg" alt="medium icon" /></a>
           </li>
           <li>
-            <a href="#"><img src="Images/github.svg" alt="This is github button" /></a>
+            <a href="#"><img src="Images/github.svg" alt="github icon" /></a>
           </li>
           <li>
-            <a href="#"><img src="Images/angellist.svg" alt="This is angellist button" /></a>
+            <a href="#"><img src="Images/angellist.svg" alt="angellist icon" /></a>
           </li>
         </ul>
         <a href="#">
-          <img src="Images/Disabled.svg" alt="This is go down button" />
+          <img src="Images/Disabled.svg" alt="go down icon" />
         </a>
       </header>
     </section>
@@ -74,7 +74,7 @@
       <h2 class="section-header">My Recent Works</h2>
       <div id="cards-grid-container">
         <div class="card">
-          <img class="card-img" src="Images/SnapshootPortfolio.png" alt="This is project 1 image" />
+          <img class="card-img" src="Images/SnapshootPortfolio.png" alt="project 1 image" />
           <div class="card-flex-container">
             <h3 class="card-title">Multi-Post Stories Gain+Glory</h3>
             <ul class="tags-flex-container">
@@ -87,7 +87,7 @@
           </div>
         </div>
         <div class="card">
-          <img class="card-img" src="Images/SnapshootPortfolio.png" alt="This is project 2 image" />
+          <img class="card-img" src="Images/SnapshootPortfolio.png" alt="project 2 image" />
           <div class="card-flex-container">
             <h3 class="card-title">Multi-Post Stories Gain+Glory</h3>
             <ul class="tags-flex-container">
@@ -100,7 +100,7 @@
           </div>
         </div>
         <div class="card">
-          <img class="card-img" src="Images/SnapshootPortfolio.png" alt="This is project 3 image" />
+          <img class="card-img" src="Images/SnapshootPortfolio.png" alt="project 3 image" />
           <div class="card-flex-container">
             <h3 class="card-title">Multi-Post Stories Gain+Glory</h3>
             <ul class="tags-flex-container">
@@ -113,7 +113,7 @@
           </div>
         </div>
         <div class="card">
-          <img class="card-img" src="Images/SnapshootPortfolio.png" alt="This is project 4 image" />
+          <img class="card-img" src="Images/SnapshootPortfolio.png" alt="project 4 image" />
           <div class="card-flex-container">
             <h3 class="card-title">Multi-Post Stories Gain+Glory</h3>
             <ul class="tags-flex-container">
@@ -126,7 +126,7 @@
           </div>
         </div>
         <div class="card">
-          <img class="card-img" src="Images/SnapshootPortfolio.png" alt="This is project 5 image" />
+          <img class="card-img" src="Images/SnapshootPortfolio.png" alt="project 5 image" />
           <div class="card-flex-container">
             <h3 class="card-title">Multi-Post Stories Gain+Glory</h3>
             <ul class="tags-flex-container">
@@ -139,7 +139,7 @@
           </div>
         </div>
         <div class="card">
-          <img class="card-img" src="Images/SnapshootPortfolio.png" alt="This is project 6 image" />
+          <img class="card-img" src="Images/SnapshootPortfolio.png" alt="project 6 image" />
           <div class="card-flex-container">
             <h3 class="card-title">Multi-Post Stories Gain+Glory</h3>
             <ul class="tags-flex-container">
@@ -163,7 +163,7 @@
       <button type="button" class="btn">Get My Resume</button>
       <ul id="about-me-ul">
         <li>
-          <img src="Images/icon-languages.png" alt="This is languages icon" />
+          <img src="Images/icon-languages.png" alt="languages icon" />
           <h3>Languages</h3>
           <ul class="tags-flex-container">
             <li class="White-tag">JavaScript</li>
@@ -173,7 +173,7 @@
           </ul>
         </li>
         <li>
-          <img src="Images/icon-frameworks.png" alt="This is frameworks icon" />
+          <img src="Images/icon-frameworks.png" alt="frameworks icon" />
           <h3>Frameworks</h3>
           <ul class="tags-flex-container">
             <li class="White-tag">Bootstrap</li>
@@ -184,7 +184,7 @@
           </ul>
         </li>
         <li>
-          <img src="Images/icon-skills.png" alt="This is skills icon" />
+          <img src="Images/icon-skills.png" alt="skills icon" />
           <h3>Skills</h3>
           <ul class="tags-flex-container">
             <li class="White-tag">Codekit</li>
@@ -243,19 +243,19 @@
 
       <ul class="social-ul" id="footer-icons">
         <li>
-          <a href="#"><img src="Images/twitter.svg" alt="This is twitter button" /></a>
+          <a href="#"><img src="Images/twitter.svg" alt="twitter icon" /></a>
         </li>
         <li>
-          <a href="#"><img src="Images/Linkedin.svg" alt="This is linkedin button" /></a>
+          <a href="#"><img src="Images/Linkedin.svg" alt="linkedin icon" /></a>
         </li>
         <li>
-          <a href="#"><img src="Images/medium.svg" alt="This is medium button" /></a>
+          <a href="#"><img src="Images/medium.svg" alt="medium icon" /></a>
         </li>
         <li>
-          <a href="#"><img src="Images/github.svg" alt="This is github button" /></a>
+          <a href="#"><img src="Images/github.svg" alt="github icon" /></a>
         </li>
         <li>
-          <a href="#"><img src="Images/angellist.svg" alt="This is angellist button" /></a>
+          <a href="#"><img src="Images/angellist.svg" alt="angellist icon" /></a>
         </li>
       </ul>
       <p id="footer-email">myemailhere@email.com</p>
