Add animation to nav-ul-container

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </header>
     <section>
       <header id="header-flex-container">
-        <div class="nav-ul-container">
+        <div class="nav-ul-container animate__animated">
           <i class="fa-solid fa-x d-none close-nav w-100 text-end p-4"></i>
           <ul class="nav-ul">
             <li><a class="nav-item nav-item1 text-decoration-none" href="#header-flex-container">Portoflio</a></li>
