Add js email validation

--- a/index.html
+++ b/index.html
@@ -359,7 +359,8 @@
             ></textarea>
           </li>
         </ul>
-        <button type="submit" class="btn">Get in touch</button>
+        <p class="email-error"></p>
+        <button type="submit" class="btn btn-success">Get in touch</button>
       </form>
 
       <ul class="social-ul" id="footer-icons">
